--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_auth: ^3.5.1
   image_picker: ^0.8.5+3
   firebase_storage: ^10.3.4
+  firebase_messaging: ^12.0.1
 
 dev_dependencies:
   flutter_test:
