--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   image_picker: ^0.8.5+3
   firebase_storage: ^10.3.4
   firebase_messaging: ^12.0.1
+  firebase_analytics: ^9.3.0
+  flutter_spinkit: ^5.1.0
 
 dev_dependencies:
   flutter_test:
