--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   firebase_messaging: ^12.0.1
   firebase_analytics: ^9.3.0
   flutter_spinkit: ^5.1.0
+  flutter_launcher_icons: ^0.9.3
 
 dev_dependencies:
   flutter_test:
