--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -7,7 +7,7 @@
 	<key>REVERSED_CLIENT_ID</key>
 	<string>com.googleusercontent.apps.277752939287-rhkv0v9dtj0ilf8q6smm7m698jhn19vl</string>
 	<key>API_KEY</key>
-	<string>AIzaSyBVJUsTTZUHvYZgF4JxgHw_HqLScADl08s</string>
+	<string></string>
 	<key>GCM_SENDER_ID</key>
 	<string>277752939287</string>
 	<key>PLIST_VERSION</key>
